# lemonadebench

./: .env.example  .gitignore  CLAUDE.md  FEATURES.md  LICENSE  QUICKSTART.md  README.md  REQUIREMENTS.md  ROADMAP.md  SCAFFOLDING_OPTIONS.md  analyze_recordings.py  calculate_optimal_profit.py  check_costs.py  cleanup_analysis.md  cost_estimation.py  pyproject.toml
analysis/: analyze_results.py  generate_plots.py  list_results.py
analysis/raw_data/: gpt-4.1-nano_suggested_price_20250703_141438.json  o4-mini_exploration_hint_20250703_141443.json  o4-mini_game_20250703_150526.json
experiments/: compare_models.py  run_benchmark.py  run_four_tests.py  run_four_tests_multi.py  run_main_experiment.py  test_inverse_demand.py
paper/: lemonadebench.tex  lemonadebench_draft.tex  references.bib
paper/tables/: computational_requirements.tex  efficiency_breakdown.tex  lemonadebench_results.tex  lemonadebench_results_simple.tex  operational_performance.tex
results/json/: gpt-4.1-nano-gpt-4.1-mini-gpt-4.1-o4-mini-o3_1games_30days_v05_20250711_184523.json  gpt-4.1-nano_all_5runs_30days_3workers_20250704_102812.json
results/latex/: gpt-4.1-mini_1games_5days_v05_20250710_233049_analysis.tex  gpt-4.1-mini_1games_5days_v05_20250710_233138_analysis.tex  gpt-4.1-nano-gpt-4.1-mini-gpt-4.1-o4-mini-o3_1games_30days_v05_20250711_184523_analysis.tex  gpt-4.1-nano-gpt-4.1-mini-gpt-4.1-o4-mini-o3_1games_30days_v05_20250713_220015_final_analysis.tex  gpt-4.1-nano-gpt-4.1-mini-gpt-4.1-o4-mini-o3_1games_30days_v05_20250713_220015_full_final_efficiency.tex  (+3 more)
results/tex/: exploration_hint.tex  (+3 more)
tests/: conftest.py  test_business_game.py  test_demand.py  test_game_recorder.py  test_inventory.py  test_openai_player.py  test_recording_validation.py  test_run_benchmark.py  test_run_single_game.py  test_simple_game.py
(+20 files in other folders)
